# cyberfile

./: .gitignore  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md  cyberfile.desktop  dev.sh  install.sh  package.sh  uninstall.sh
src/: app.rs  config.rs  filesystem.rs  launcher.rs  main.rs  scenes.rs  theme.rs
src/integrations/: audio.rs  dbus.rs  devices.rs  fzf.rs  journald.rs  media.rs  mod.rs  network.rs  processes.rs  services.rs  sftp.rs  windows.rs
src/ui/: boot_screen.rs  command_bar.rs  data_rain.rs  device_bay.rs  effects.rs  embedded_terminal.rs  file_view.rs  grid_view.rs  hex_grid_view.rs  hex_viewer.rs  hud_overlay.rs  log_viewer.rs  mod.rs  music_widget.rs  network_mesh.rs  preview_panel.rs  process_matrix.rs  resource_monitor.rs  scene_manager.rs  service_deck.rs  settings_panel.rs  sidebar.rs  signal_deck.rs  status_bar.rs  tabs.rs  window_bridge.rs
themes/: default.toml
