[package]
name = "cyberfile"
version = "1.3.1"
edition = "2021"
description = "Cyberpunk-styled file manager for Linux"

[dependencies]
eframe = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
dirs = "6"
open = "5"
bytesize = "2"
sysinfo = "0.32"
image = "0.25"
uzers = "0.12"
zip = { version = "2", features = ["deflate"] }
regex = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
ssh2 = "0.9"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
